    now increment the second version number component. (Closes: #712586)
  * pg_virtualenv:
    + On error, show tail of server log file.
    + When no command is given, open a shell.
  * pg_createcluster: Add --createclusterconf and --environment options.
  * pg_ctlcluster: Create stats_temp_directory when missing.
  * pg_ctlcluster: You must run this program as the cluster owner ... or root.

  [ Peter Eisentraut ]
  * PgCommon.pm, pg_createcluster, pg_dropcluster: Don't call external
    programs with full path where not necessary.

 -- Peter Eisentraut <petere@debian.org>  Mon, 08 Jul 2013 22:33:34 -0400

postgresql-common (145) unstable; urgency=low

  [ Christoph Berg ]
  * pg_ctlcluster: Use "install" instead of File::Path to create
    unix_socket_directory. (Introduced in 141, Closes: #710093)

  [ Martin Pitt ]
  * debian/maintscripts-functions, configure_cluster(): Do not trust the
    locale from the environment, as programs like ssh and sudo propagate
    remote and user locale by default. Instead, only use the locale settings
    from /etc/environment and /etc/default/locale, to prevent trying to
    configure the default cluster with a nonexisting or hard to predict
    locale. (LP: #969462, also see Debian #700271)

 -- Christoph Berg <myon@debian.org>  Mon, 10 Jun 2013 17:01:01 +0200

postgresql-common (144) unstable; urgency=low

  * testsuite: Allow overriding the list of versions to test (-v).
  * 040_upgrade: Add a test case for #688960 ("OLD used in query that is not
    in a rule").
  * pg_upgradecluster: Add --quote-all-identifiers to the pg_dump(all)
    invocations so pg_dump-style upgrades do not fail when keywords get
    un-reserved. (Closes: #688960; the pg_upgrade part of this will be fixed
    in PostgreSQL upstream.)
  * pg_ctlcluster: Add --mode shutdown option.
  * pg_virtualenv: Allow running as non-root user.

 -- Christoph Berg <myon@debian.org>  Fri, 31 May 2013 21:37:47 -0700

postgresql-common (143) unstable; urgency=low
